--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+    <fr.zzi.canvas.MyCanvas
+            android:id="@+id/my_canvas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
 
 </FrameLayout>
