--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="#cccccc"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -10,5 +10,129 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+    <View
+            android:id="@+id/color_separator"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_canvas"/>
+    <View
+            android:id="@+id/current_color"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/my_canvas"
+            app:layout_constraintBottom_toTopOf="@+id/color_separator"/>
 
-</FrameLayout>
+    <View
+            android:id="@+id/color_separator_bis"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/current_color"/>
+
+    <View
+            android:id="@+id/color_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/color_2"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <View
+            android:id="@+id/color_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/green"
+            app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator"
+            app:layout_constraintStart_toEndOf="@id/color_1"
+            app:layout_constraintEnd_toStartOf="@+id/color_3"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
+    <View
+            android:id="@+id/color_3"
+            android:background="@color/yellow"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
+            app:layout_constraintTop_toBottomOf="@+id/current_color"
+            app:layout_constraintEnd_toStartOf="@+id/color_4"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@id/color_2"/>
+
+    <View
+            android:background="@color/orange"
+            android:id="@+id/color_4"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
+            app:layout_constraintTop_toBottomOf="@+id/current_color"
+            app:layout_constraintEnd_toEndOf="@+id/color_5"
+            app:layout_constraintStart_toEndOf="@id/color_3"/>
+    <View
+            android:background="@color/red"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            android:id="@+id/color_5"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
+            app:layout_constraintTop_toBottomOf="@+id/current_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/color_4"/>
+    <View
+            android:id="@+id/color_6"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/purple"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/color_7"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <View
+            android:id="@+id/color_7"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
+            app:layout_constraintStart_toEndOf="@id/color_6"
+            app:layout_constraintEnd_toStartOf="@+id/color_8"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
+    <View
+            android:id="@+id/color_8"
+            android:background="@color/blue_light"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
+            app:layout_constraintEnd_toStartOf="@+id/color_9"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@id/color_7"/>
+
+    <View
+            android:background="@color/grey"
+            android:id="@+id/color_9"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
+            app:layout_constraintEnd_toEndOf="@+id/color_10"
+            app:layout_constraintStart_toEndOf="@id/color_8"/>
+    <View
+            android:background="@color/black"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            android:id="@+id/color_10"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/color_9"/>
+
+</android.support.constraint.ConstraintLayout>
