--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             app:layout_constraintTop_toBottomOf="@+id/my_canvas"/>
     <View
             android:id="@+id/current_color"
+            android:background="@color/black"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/my_canvas"
@@ -35,6 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/white"
+            android:onClick="updateColor"
             app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
             app:layout_constraintTop_toBottomOf="@+id/color_separator"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/green"
+            android:onClick="updateColor"
             app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
             app:layout_constraintTop_toBottomOf="@+id/color_separator"
             app:layout_constraintStart_toEndOf="@id/color_1"
@@ -56,6 +59,7 @@
             android:background="@color/yellow"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:onClick="updateColor"
             app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
             app:layout_constraintTop_toBottomOf="@+id/current_color"
             app:layout_constraintEnd_toStartOf="@+id/color_4"
@@ -67,6 +71,7 @@
             android:id="@+id/color_4"
             android:layout_width="0dp"
             app:layout_constraintHorizontal_chainStyle="spread"
+            android:onClick="updateColor"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
             app:layout_constraintTop_toBottomOf="@+id/current_color"
@@ -77,6 +82,7 @@
             app:layout_constraintHorizontal_chainStyle="spread"
             android:id="@+id/color_5"
             android:layout_width="0dp"
+            android:onClick="updateColor"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="@id/color_separator_bis"
             app:layout_constraintTop_toBottomOf="@+id/current_color"
@@ -88,6 +94,7 @@
             android:layout_height="0dp"
             android:background="@color/purple"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="updateColor"
             app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/color_7"
@@ -98,6 +105,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/blue"
+            android:onClick="updateColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
             app:layout_constraintStart_toEndOf="@id/color_6"
@@ -109,6 +117,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="updateColor"
             app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
             app:layout_constraintEnd_toStartOf="@+id/color_9"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -119,6 +128,7 @@
             android:id="@+id/color_9"
             android:layout_width="0dp"
             app:layout_constraintHorizontal_chainStyle="spread"
+            android:onClick="updateColor"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
@@ -131,6 +141,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="updateColor"
             app:layout_constraintTop_toBottomOf="@+id/color_separator_bis"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/color_9"/>
