--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <View
             android:id="@+id/color_separator"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1px"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/my_canvas"/>
     <View
@@ -27,7 +27,7 @@
     <View
             android:id="@+id/color_separator_bis"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1px"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/current_color"/>
 
