--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <fr.zzi.canvas.MyCanvas
-            android:id="@+id/my_canvas"
+    <fr.zzi.canvas.CanvasView
+            android:id="@+id/canvas_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -15,13 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="1px"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/my_canvas"/>
+            app:layout_constraintTop_toBottomOf="@+id/canvas_view"/>
     <View
             android:id="@+id/current_color"
             android:background="@color/black"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/my_canvas"
+            app:layout_constraintTop_toBottomOf="@id/canvas_view"
             app:layout_constraintBottom_toTopOf="@+id/color_separator"/>
 
     <View
